[package]
name = "etas"
version = "0.2.0"
edition = "2021"
description = "A simple Epidemic-Type Aftershock-Sequence model implementation"
license = "MIT"
readme = "README.md"
repository = "https://github.com/alphonsepaix/etas"
authors = ["Alphonse Paix <alphonse.paix@outlook.com>"]

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
eframe = "0.25.0"
indicatif = "0.17.6"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
